--- a/JOTWEB/OIL/css/OIT0001L.css
+++ b/JOTWEB/OIL/css/OIT0001L.css
@@ -1,2 +1,18 @@
-﻿body {
+﻿/* 左ヘッダー行スタイル */
+div[data-generated="1"] div[id$="_HL"] table tr {
+    height:37px;
+}
+
+/* 右ヘッダー行スタイル */
+div[data-generated="1"] div[id$="_HR"] table tr {
+    height: 37px;
+}
+
+/* 左(固定データテーブル用)DIV */
+div[data-generated="1"] div[id$="_DL"] {
+    top:37px;
+}
+/* 右(可変データテーブル用)DIV */
+div[data-generated="1"] div[id$="_DR"] {
+    top: 37px;
 }
