--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -113,6 +113,7 @@ div {
         border-color: rgba(176, 176, 276, 0.6);
         border-style: solid;
         border-width: thin;
+        border-radius: 3px;
         /*    border: 1px solid #1b2538; */
     }
 
