--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -384,6 +384,11 @@ div {
     #detailkeybox input[type='text'] {
         border-radius: 3px;
     }
+        #detailkeybox input[type='text']:focus {
+            border: 1px solid rgba(1,60,65, .5);
+            outline: none;
+            box-shadow: 0 0 5px 1px rgba(218,60,65, .5);
+        }
 
 
 /* テキストボックス */
