--- a/JOTWEB/OIL/css/OIM0005C.css
+++ b/JOTWEB/OIL/css/OIM0005C.css
@@ -52,9 +52,12 @@ input[type='text'] {
 }
 
     input[type='text']:not(.BoxIcon):not(.CalendarIcon) {
-        padding-left: 0;
         padding-right: 1.25em;
     }
+
+.WF_TEXTBOX_CSS:not(.BoxIcon):not(.CalendarIcon)::-ms-clear {
+    margin-right: -1.25em;
+} 
 
 /*左Boxオープン用虫眼鏡アイコン*/
 .BoxIcon {
