--- a/JOTWEB/OIL/css/OIT0001D.css
+++ b/JOTWEB/OIL/css/OIT0001D.css
@@ -571,7 +571,7 @@ div[data-generated="1"] th {
 }
 
 /* 交付アラート、全検アラートのツールチップをOFFにする */
-div[data-generated="1"] td:nth-child(6),
+/*div[data-generated="1"] td:nth-child(6),
 div[data-generated="1"] td:nth-child(8){
     pointer-events:none;
-}
+}*/
